Avoid content spillage

--- a/src/assets/sass/modules/_grid.scss
+++ b/src/assets/sass/modules/_grid.scss
@@ -10,6 +10,7 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 0 2em;
+    overflow: auto; // Avoid content spillage.
 }
 
 /**
